@@ -1,8 +1,8 @@
 package com.floti.api.domain.board.qna.service;
 
 import com.floti.api.domain.auth.entity.Users;
+import com.floti.api.domain.board.like.entity.LikeAnswers;
 import com.floti.api.domain.board.like.repository.LikeAnswerRepository;
-import com.floti.api.domain.board.like.repository.LikeCommentRepository;
 import com.floti.api.domain.board.qna.dto.QnaPostResponse;
 import com.floti.api.domain.board.qna.entity.Answers;
 import com.floti.api.domain.board.qna.entity.QnaPosts;
@@ -19,8 +19,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.when;
@@ -40,29 +39,35 @@ public class QnaServiceTest {
     private LikeAnswerRepository likeAnswerRepository;
 
     private static final Long VALID_ID = 1L;
+    private static final Long INVALID_ID = 9999L;
 
     private final Users testUser = Users.builder().id(VALID_ID).nickname("테스터01").build();
     private final QnaPosts testPost = QnaPosts.builder().author(testUser).title("테스트 제목").build();
 
     @Test
-    @DisplayName("getQnaPost: 답변 있음 - 게시글 상세에 답변 포함")
+    @DisplayName("getQnaPost: 답변 있음 - 게시글 상세에 답변 리스트 포함")
     void getQnaPost_exist() {
         //given
         List<Answers> answers = List.of(
-                Answers.builder().author(testUser).content("첫번째 답변").build()
+                Answers.builder().id(VALID_ID).author(testUser).content("첫번째 답변").build(),
+                Answers.builder().id(INVALID_ID).author(testUser).content("두번째 답변").build()
         );
+        LikeAnswers likeAnswer = new LikeAnswers(VALID_ID, VALID_ID);
 
         when(qnaPostRepository.findById(anyLong())).thenReturn(Optional.of(testPost));
         when(answerRepository.findByPostId(anyLong())).thenReturn(answers);
-        when(likeAnswerRepository.findByUserIdAndAnswerIdIn(anyLong(), anyList())).thenReturn(Collections.emptyList());
+        when(likeAnswerRepository.findByUserIdAndAnswerIdIn(anyLong(), anyList())).thenReturn(List.of(likeAnswer));
 
         //when
         QnaPostResponse response = qnaPostService.getQnaPost(VALID_ID, VALID_ID);
 
         //then
         assertEquals("테스트 제목", response.getTitle());
-        assertEquals(1, response.getAnswers().size());
+        assertEquals(2, response.getAnswers().size());
         assertEquals("첫번째 답변", response.getAnswers().get(0).getContent());
+        assertTrue(response.getAnswers().get(0).isLiked());
+        assertEquals("두번째 답변", response.getAnswers().get(1).getContent());
+        assertFalse(response.getAnswers().get(1).isLiked());
     }
 
     @Test
